--- a/src/index.scss
+++ b/src/index.scss
@@ -18,6 +18,12 @@ padding: 0;
 
 }
 
+$primary-color: #707070;
+$white-bg:#fff;
+$font-open: 'Open Sans', sans-serif;
+$font-sans: 'Source Sans Pro', sans-serif;
+$active-font-color:#ff8b92;
+
 
 .form-control{
   background-color: #fff;
@@ -34,7 +40,35 @@ padding: 0;
   float: none;
 
 }
-
+body{
+  background: #f5f5f5;
+}
+.sideBarmenu,.main-header {
+  background: #fff;
+}
+.routerView{
+  display: flex;
+  width: 100%;
+  background-color: #f5f5f5;
+}
+.sideBarmenu{
+  min-width: 252px;
+    max-width: 202x;
+    background: $white-bg;
+    color: #fff;
+    transition: all 0.3s;
+}
+.main-container{
+  
+  /* margin-left: 210px; */
+  width: 100%;
+  padding: 20px;
+  /* min-height: 100vh; */
+  transition: all 0.3s;
+}
+ul{
+  margin-bottom: 0 !important;
+}
 /****************************Login Page************************/
 
 .loginAlign{      background-image: url(../src/assets/images/dashboard_bg.png);
@@ -198,7 +232,68 @@ overflow-y: auto;
 .dropdown-notifications li a span .notification-date {
     padding: 0 5px;
 }
+.header-right li{
+  float: left;
+}
+.profile-sec{
+  .user-name{
+    font-size: 15px;
+    color: $primary-color;
+  }
+}
+.header-right{ li {
+  margin-left: 10px;
+  cursor: pointer;}
+  .notify-sec{
+    margin-top: 3px;
+  }
+  a{
+    display: block;
+  }
+}
+/****************************Sidebar Section************************/
 
+.sideBarmenu{ 
+  li .menu-link{
+  color: $primary-color;
+  font-size: 17px;
+  display: block;
+}
+.menu-link{
+  border-left:8px solid transparent;
+  display: block;
+  padding: 10px 0;
+  font-family: $font-sans;
+}
+li:hover .menu-link{
+  border-image: linear-gradient(180deg,#ff8b92, #feb683) 1;
+  border-left: 8px solid #ff8b92;
+  color: $active-font-color;
+}
+.menu-list i{
+  background-image: url(../src/assets/images/AgroSprit_menuicons.png);
+  background-repeat: no-repeat;
+  background-position: -19px -23px;
+    width: 24px;
+    height: 30px;
+    display: inline-block;
+    margin: 0 8px;
+}
+.user_manag i{
+  background-position: -19px -92px;
+}
+.prdt_cate i{ background-position: -19px -381px;}
+.product i{ background-position: -19px -301px;}
+.order i{ background-position: -19px -513px;}
+.coupon i{ background-position: -19px -442px;}
+.pay_manag i{ background-position: -19px -161px;}
+.report_manag i{ background-position: -19px -230px;}
+.faq i{ background-position: -19px -584px;}
+.static i{ background-position: -19px -92px;}
+li:hover .menu-list i{
+  background-position-x: -59px;
+}
+}
 
 
 
