--- a/src/index.scss
+++ b/src/index.scss
@@ -85,6 +85,9 @@ h3{font-size: $h3}
 h4{font-size: $h4}
 h5{font-size: $h5}
 h6{font-size: $h6}
+.white-bg{
+  background-color: $white;
+}
 /****************************Login Page************************/
 
 .loginAlign{      background-image: url(../src/assets/images/dashboard_bg.png);
@@ -309,6 +312,38 @@ li:hover .menu-list i{
     
   }
 }
+.ticket_block{
+  border: 1px solid #ccc;
+  .profile-img{
+    width: 100px;
+    height: 100px;
+    border-radius: 50px;
+    text-align: center;
+    margin: 0 auto;
+    border: 1px solid #ddd;
+    img{
+      width: 100%;
+      height: auto;
+      border-radius: 100px;
+    }
+  }
+
+ 
+}
+.farm_block {
+  border: 1px solid #ccc;
+  width: 100px;
+  height: 100px;
+}
+.centext{
+  text-align: center;
+}
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  width: 40%;
+}
+
 
 .pdl0{padding-left:0px !important; }
 .pdr0{padding-right:0px !important; }
