--- a/src/index.scss
+++ b/src/index.scss
@@ -939,3 +939,9 @@ svg{
   border-radius: .25rem;
   transition: background-color .15s ease-out,color .15s ease-out;
 }
+
+.order-img{
+  border-radius: 20px;
+  height: auto;
+  width: 100px;
+}
