--- a/src/index.scss
+++ b/src/index.scss
@@ -1023,6 +1023,12 @@ svg{
   height: auto;
   width: 100px;
 }
-.stepsCancel{
+// .stepsCancel{
 
+// }
+
+/****************************Shop Details Section************************/
+
+.main-shop{
+  border-right: 1px inset;
 }
