--- a/src/index.scss
+++ b/src/index.scss
@@ -88,7 +88,7 @@ h5{font-size: $h5}
 h6{font-size: $h6}
 .white-bg{
   background-color: $white;
-  padding: 17px 0px 8px 20px;
+  // padding: 17px 0px 8px 20px;
 }
 /****************************Login Page************************/
 
@@ -290,7 +290,9 @@ li:hover .menu-list i{
   }
 
 }
-
+.dashboard-title{
+  color: #fff;
+}
 .new-order .card{
   background-image: $gradient-2;
   .box{
@@ -782,11 +784,13 @@ svg{
 // .rdt_TableBody{
 //   padding: 10px;
 // }
-.viewcrop-btn{
+.view-btn{
   // border: 2px solid #90EE90;
   border:none;
   background-image: linear-gradient(to right, #ff8b92 , #feb683);
   border-radius: 25px;
+  color: #fff;
+  width: 75px;
 }
 
 /****************************Dashboard section************************/
@@ -1028,6 +1032,30 @@ svg{
 
 // }
 
+.ship-order .card{
+  background-image: $gradient-2;
+  .box{
+    background-image: url(../src/assets/images/Dashboard/deliveryorders-icon.png);
+    background-repeat: no-repeat;
+    
+  }
+}
+.overdue-order .card{
+  background-image: $gradient-3;
+  .box{
+    background-image: url(../src/assets/images/Dashboard/overdueship-icon.png);
+    background-repeat: no-repeat;
+    
+  }
+}
+.pending-order .card{
+  background-image: $gradient-1;
+  .box{
+    background-image: url(../src/assets/images/Dashboard/neworders-icon.png);
+    background-repeat: no-repeat;
+    
+  }
+}
 /****************************Shop Details Section************************/
 
 .main-shop{
@@ -1051,7 +1079,6 @@ background-repeat:no-repeat;
 background-position:270px -2670px;
 }
 
-
 // .form p{
 //   width: 100%;
 //   height: 100%;
@@ -1072,3 +1099,5 @@ background-position:270px -2670px;
  // position: absolute;
   opacity: 0;
 }
+
+
