--- a/src/assets/css/login.scss
+++ b/src/assets/css/login.scss
@@ -62,6 +62,10 @@ body, html {
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
 }
+.form-adjust{
+    background-color: #fff;
+    padding-top : 20px;
+}
 
 .form-signin #inputEmail,
 .form-signin #inputPassword {
