Dashboard pie-charts user analysis

--- a/src/index.scss
+++ b/src/index.scss
@@ -313,6 +313,10 @@ li:hover .menu-list i{
   }
 
 }
+.LineChart.main-wrapper {
+  padding: 43px 22px 0px 0px;
+  margin: 17px;
+}
 .dashboard-title{
   color: #fff;
 }
@@ -1192,5 +1196,6 @@ background-position:270px -2670px;
  // position: absolute;
   opacity: 0;
 }
+
 
 
