Dashboard changes ui fixes

--- a/src/index.scss
+++ b/src/index.scss
@@ -729,6 +729,7 @@ margin-left: 0;
   width: 100%;
 }
 .crop-table{
+  font-size: 20px !important;
   background-color: #fff;
 
 }
@@ -1196,6 +1197,19 @@ background-position:270px -2670px;
  // position: absolute;
   opacity: 0;
 }
+.underconstImg
+{    position: relative;
+  left: 190px;
+  top: 70px;
+  }
 
-
-
+  .juoDAN{
+    font-weight: bold !important;
+    font-size: 14px !important;
+    color : #9E9E9E !important;
+  }
+  .cZGXXG{
+    font-weight: bold !important;
+    font-size: 14px !important;
+    color : #9E9E9E !important; 
+  }
